run again the sensen making aevalutor taking in consideration each criterion at the time an not all at once

--- a/build_community_summary.ipynb
+++ b/build_community_summary.ipynb
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a22dab4e",
    "metadata": {},
    "outputs": [],
@@ -1449,40 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ec5817e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fetch_corpus_summary(search_query: str, max_results: int = 20) -> str:\n",
-    "    import arxiv\n",
-    "    from textwrap import wrap\n",
-    "\n",
-    "    client = arxiv.Client()\n",
-    "    search = arxiv.Search(\n",
-    "        query=search_query,\n",
-    "        max_results=max_results,\n",
-    "        sort_by=arxiv.SortCriterion.Relevance\n",
-    "    )\n",
-    "\n",
-    "    docs = []\n",
-    "    for result in client.results(search):\n",
-    "        docs.append({\n",
-    "            \"title\": result.title.strip(),\n",
-    "            \"summary\": result.summary.strip(),\n",
-    "            \"url\": result.entry_id.strip()\n",
-    "        })\n",
-    "\n",
-    "    # Optionally build a readable corpus overview\n",
-    "    summary_text = \"\\n\\n\".join(\n",
-    "        f\"📄 {doc['title']}\\n{doc['summary']}\" for doc in docs\n",
-    "    )\n",
-    "    return summary_text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "d96fe4d3",
    "metadata": {},
    "outputs": [
@@ -1496,31 +1463,43 @@
       "👤 Generating tasks for Persona 1/2...\n",
       "   📌 Generating 2 questions for Task 1/2...\n",
       "     ✅ Progress: 2/8 questions generated\n",
-      "   📌 Generating 2 questions for Task 2/2...\n",
-      "     ✅ Progress: 4/8 questions generated\n",
       "\n",
       "👤 Generating tasks for Persona 2/2...\n",
       "   📌 Generating 2 questions for Task 1/2...\n",
-      "     ✅ Progress: 6/8 questions generated\n",
+      "     ✅ Progress: 4/8 questions generated\n",
       "   📌 Generating 2 questions for Task 2/2...\n",
-      "     ✅ Progress: 8/8 questions generated\n",
+      "     ✅ Progress: 6/8 questions generated\n",
       "\n",
       "💾 Saving generated questions...\n",
-      "✅ Saved 4 persona-task blocks to ./data/global_questions/t20/global_sensemaking_questions.json\n",
+      "✅ Saved 3 persona-task blocks to ./data/global_questions/t20/global_sensemaking_questions.json\n",
       "✅ All questions saved successfully.\n"
      ]
     }
    ],
    "source": [
-    "query = \"agent OR 'large language model' OR 'prompt engineering'\"\n",
-    "corpus_description = fetch_corpus_summary(query, max_results=20)\n",
+    "corpus_description = \"\"\" \n",
+    "This corpus contains 20 recent research papers retrieved from arXiv using the query: \"agent OR large language model OR prompt engineering\". The papers focus on cutting-edge advancements in large language models (LLMs), intelligent agent architectures, and prompt engineering strategies to enhance model reasoning and coordination. Key areas include:\n",
+    "\n",
+    "- Design of multi-agent systems using LLMs as agents or controllers.\n",
+    "- Prompting techniques such as Chain-of-Thought, Reflection, and ReAct used for structured reasoning.\n",
+    "- Methods for orchestrating collaborative agents in planning, execution, or communication tasks.\n",
+    "- Evaluation of LLM interpretability, alignment with human intent, and safe deployment in dynamic environments.\n",
+    "- Societal impacts, including ethical considerations, safety risks, and governance frameworks for autonomous LLM-based systems.\n",
+    "\n",
+    "The corpus spans technical proposals, system frameworks, empirical evaluations, and conceptual discussions relevant to both applied NLP and AI safety domains.\n",
+    "\"\"\"\n",
     "\n",
     "generator = GlobalQuestionGenerator(\n",
     "    model=\"o4-mini-2025-04-16\",\n",
     "    output_path=\"./data/global_questions/t20\"\n",
     ")\n",
     "\n",
-    "questions = generator.run(corpus_description=corpus_description, k=2, n=2, m=2)"
+    "questions = generator.run(\n",
+    "    corpus_description=corpus_description,\n",
+    "    k=2,\n",
+    "    n=2,\n",
+    "    m=2\n",
+    ")"
    ]
   },
   {
@@ -1573,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7adf5be3",
    "metadata": {},
    "outputs": [
@@ -1581,37 +1560,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Milvus DB exists. Connecting to existing database...\n",
+      "Milvus DB exists. Connecting to existing database...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/milvus_lite/__init__.py:15: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
+      "  from pkg_resources import DistributionNotFound, get_distribution\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "🔍 Evaluating Q1/10\n",
       "🧩 Prepared 30 summary chunks.\n",
-      "✅ Collected 25 helpful answers.\n",
+      "✅ Collected 27 helpful answers.\n",
       "🔍 Evaluating Q2/10\n",
       "🧩 Prepared 30 summary chunks.\n",
-      "✅ Collected 25 helpful answers.\n",
+      "✅ Collected 27 helpful answers.\n",
       "🔍 Evaluating Q3/10\n",
       "🧩 Prepared 30 summary chunks.\n",
-      "✅ Collected 24 helpful answers.\n",
+      "✅ Collected 27 helpful answers.\n",
       "🔍 Evaluating Q4/10\n",
       "🧩 Prepared 30 summary chunks.\n",
-      "✅ Collected 28 helpful answers.\n",
+      "✅ Collected 23 helpful answers.\n",
       "🔍 Evaluating Q5/10\n",
       "🧩 Prepared 30 summary chunks.\n",
-      "✅ Collected 27 helpful answers.\n",
+      "✅ Collected 29 helpful answers.\n",
       "🔍 Evaluating Q6/10\n",
       "🧩 Prepared 30 summary chunks.\n",
-      "✅ Collected 24 helpful answers.\n",
+      "✅ Collected 25 helpful answers.\n",
       "🔍 Evaluating Q7/10\n",
       "🧩 Prepared 30 summary chunks.\n",
-      "✅ Collected 28 helpful answers.\n",
+      "✅ Collected 29 helpful answers.\n",
       "🔍 Evaluating Q8/10\n",
       "🧩 Prepared 30 summary chunks.\n",
-      "✅ Collected 25 helpful answers.\n",
+      "✅ Collected 22 helpful answers.\n",
       "🔍 Evaluating Q9/10\n",
       "🧩 Prepared 30 summary chunks.\n",
-      "✅ Collected 24 helpful answers.\n",
+      "✅ Collected 28 helpful answers.\n",
       "🔍 Evaluating Q10/10\n",
       "🧩 Prepared 30 summary chunks.\n",
-      "✅ Collected 25 helpful answers.\n",
+      "✅ Collected 29 helpful answers.\n",
       "\n",
       "✅ All evaluations saved to: ./data/global_questions/t20/C3_evaluated_answers.md\n"
      ]
@@ -1641,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e59c3e04",
    "metadata": {},
    "outputs": [
@@ -1649,24 +1642,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Milvus DB exists. Connecting to existing database...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/milvus_lite/__init__.py:15: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
-      "  from pkg_resources import DistributionNotFound, get_distribution\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Milvus DB exists. Connecting to existing database...\n",
       "🔍 Evaluating Q1/10\n",
       "🧩 Prepared 27 summary chunks.\n",
-      "✅ Collected 26 helpful answers.\n",
+      "✅ Collected 25 helpful answers.\n",
       "🔍 Evaluating Q2/10\n",
       "🧩 Prepared 27 summary chunks.\n",
       "✅ Collected 23 helpful answers.\n",
@@ -1675,25 +1654,25 @@
       "✅ Collected 24 helpful answers.\n",
       "🔍 Evaluating Q4/10\n",
       "🧩 Prepared 27 summary chunks.\n",
-      "✅ Collected 23 helpful answers.\n",
+      "✅ Collected 24 helpful answers.\n",
       "🔍 Evaluating Q5/10\n",
       "🧩 Prepared 27 summary chunks.\n",
-      "✅ Collected 26 helpful answers.\n",
+      "✅ Collected 25 helpful answers.\n",
       "🔍 Evaluating Q6/10\n",
       "🧩 Prepared 27 summary chunks.\n",
-      "✅ Collected 18 helpful answers.\n",
+      "✅ Collected 22 helpful answers.\n",
       "🔍 Evaluating Q7/10\n",
       "🧩 Prepared 27 summary chunks.\n",
-      "✅ Collected 26 helpful answers.\n",
+      "✅ Collected 24 helpful answers.\n",
       "🔍 Evaluating Q8/10\n",
       "🧩 Prepared 27 summary chunks.\n",
-      "✅ Collected 23 helpful answers.\n",
+      "✅ Collected 20 helpful answers.\n",
       "🔍 Evaluating Q9/10\n",
       "🧩 Prepared 27 summary chunks.\n",
       "✅ Collected 25 helpful answers.\n",
       "🔍 Evaluating Q10/10\n",
       "🧩 Prepared 27 summary chunks.\n",
-      "✅ Collected 25 helpful answers.\n",
+      "✅ Collected 24 helpful answers.\n",
       "\n",
       "✅ All evaluations saved to: ./data/global_questions/t20/C2_evaluated_answers.md\n"
      ]
